`app` 모듈의 `.gitignore` 파일 업데이트

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,11 @@
-/build
+# generated files
+bin/
+gen/
+out/
+build/
+generated/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+.idea/*
