--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,27 @@
 [versions]
 accompanist = "0.37.3"
 agp = "9.0.0"
-androidxNavigation = "2.9.6"
+androidxNavigation = "2.9.7"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.2"
-kotlin = "2.3.0"
-composeBom = "2026.01.00"
+activityCompose = "1.12.4"
+kotlin = "2.3.10"
+composeBom = "2026.02.00"
 timber = "5.0.1"
 appStartup = "1.2.0"
 appcompat = "1.7.1"
 material = "1.13.0"
-hilt = "2.59"
+hilt = "2.59.1"
 hiltNavigationCompose = "1.3.0"
 orbit = "11.0.0"
 ksp = "2.3.4"
 ktlint = "1.8.0"
-spotless = "8.2.0"
+spotless = "8.2.1"
 detekt = "1.23.8"
+dependencyAnalysis = "3.5.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -71,6 +72,7 @@ hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+dependency-analysis = { id = "com.autonomousapps.dependency-analysis", version.ref = "dependencyAnalysis" }
 
 # Plugins defined by bookmarker
 bookmarker-android-application = { id = "bookmarker.android.application" }
