--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -83,3 +83,4 @@ bookmarker-hilt = { id = "bookmarker.hilt" }
 bookmarker-android-feature = { id = "bookmarker.android.feature" }
 bookmarker-jvm-library = { id = "bookmarker.jvm.library" }
 bookmarker-code-quality = { id = "bookmarker.code.quality" }
+bookmarker-android-library-compose = { id = "bookmarker.android.library.compose" }
