--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ activityCompose = "1.12.4"
 kotlin = "2.3.10"
 composeBom = "2026.02.00"
 timber = "5.0.1"
-jsoup = "1.17.2"
+jsoup = "1.22.1"
 appStartup = "1.2.0"
 appcompat = "1.7.1"
 material = "1.13.0"
@@ -70,7 +70,7 @@ orbit-test = { group = "org.orbit-mvi", name = "orbit-test", version.ref = "orbi
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
-jsoup = { group = "org.jsoup:jsoup", name = "timber", version.ref = "jsoup" }
+jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup" }
 
 # Dependencies of the included build-logic
 android-gradleApiPlugin = { group = "com.android.tools.build", name = "gradle-api", version.ref = "agp" }
