--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,8 @@ spotless = "8.2.1"
 detekt = "1.23.8"
 dependencyAnalysis = "3.5.1"
 kotlinSerialization = "1.7.3"
+kotest = "6.1.3"
+kotlinxCoroutines = "1.10.2"
 
 [libraries]
 # androidx
@@ -68,6 +70,8 @@ orbit-test = { group = "org.orbit-mvi", name = "orbit-test", version.ref = "orbi
 
 # test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+kotest-assertions-core = { group = "io.kotest", name = "kotest-assertions-core", version.ref = "kotest" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup" }
