--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ jsoup = "1.22.1"
 appStartup = "1.2.0"
 appcompat = "1.7.1"
 material = "1.13.0"
-hilt = "2.59.1"
+hilt = "2.59.2"
 hiltNavigationCompose = "1.3.0"
 orbit = "11.0.0"
 ksp = "2.3.4"
@@ -26,6 +26,7 @@ dependencyAnalysis = "3.5.1"
 kotlinSerialization = "1.7.3"
 kotest = "6.1.3"
 kotlinxCoroutines = "1.10.2"
+coil = "2.7.0"
 
 [libraries]
 # androidx
@@ -61,6 +62,9 @@ hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-com
 #kotlin
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "kotlinSerialization" }
+
+#image
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 # orbit
 orbit-core = { group = "org.orbit-mvi", name = "orbit-core", version.ref = "orbit" }
