--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ material = "1.13.0"
 hilt = "2.59.2"
 hiltNavigationCompose = "1.3.0"
 orbit = "11.0.0"
+mavericks = "3.1.0"
 ksp = "2.3.4"
 ktlint = "1.8.0"
 spotless = "8.2.1"
@@ -72,6 +73,10 @@ orbit-viewmodel = { group = "org.orbit-mvi", name = "orbit-viewmodel", version.r
 orbit-compose = { group = "org.orbit-mvi", name = "orbit-compose", version.ref = "orbit" }
 orbit-test = { group = "org.orbit-mvi", name = "orbit-test", version.ref = "orbit" }
 
+# mavericks
+mavericks-core = { group = "com.airbnb.android", name = "mavericks", version.ref = "mavericks" }
+mavericks-compose = { group = "com.airbnb.android", name = "mavericks-compose", version.ref = "mavericks" }
+
 # test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotest-assertions-core = { group = "io.kotest", name = "kotest-assertions-core", version.ref = "kotest" }
@@ -112,3 +117,4 @@ bookmarker-jvm-library = { id = "bookmarker.jvm.library" }
 bookmarker-code-quality = { id = "bookmarker.code.quality" }
 
 bookmarker-android-mvi-orbit = { id = "bookmarker.android.mvi.orbit" }
+bookmarker-android-mvi-mavericks = { id = "bookmarker.android.mvi.mavericks" }
