--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 accompanist = "0.37.3"
 agp = "9.0.1"
 androidxNavigation = "2.9.7"
+androidxDatastore = "1.2.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -39,6 +40,7 @@ androidx-activity-compose = { group = "androidx.activity", name = "activity-comp
 androidx-startup = { group = "androidx.startup", name = "startup-runtime", version.ref = "appStartup" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidxDatastore" }
 
 # androidx.compose
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
